--- a/WebContent/css/style.css
+++ b/WebContent/css/style.css
@@ -39,7 +39,7 @@ html, body {
 }
 
 body {
-	background-color: #2f2f2f;
+	background-image: url("../images/1.png") ;
 	font-family: "Titillium Web", sans-serif;
 	font-weight: normal;
 	overflow-x: hidden;
